updated pom.xml. Added start for user service in client.

--- a/src/main/public/index.html
+++ b/src/main/public/index.html
@@ -23,6 +23,8 @@
 <!--controllers-->
 <script src="js/controllers/login-controller.js"></script>
 
+<!--services-->
+<script src="js/services/users.js"></script>
 
 <!--components-->
 <script src="js/components/login-form-component.js"></script>
