added register form toggling and service call for register button.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,6 +10,9 @@
 <!--style-->
 <link href="vendors/angular-material.min.css" rel="stylesheet"/>
 
+<!--icons-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <!--vendors-->
 <script src="vendors/angular.min.js"></script>
 <script src="vendors/angular-ui-router.min.js"></script>
@@ -28,6 +31,7 @@
 
 <!--components-->
 <script src="js/components/login-form-component.js"></script>
+<script src="js/components/register-form-component.js"></script>
 
 </body>
 </html>
