made register own view. added authenication services and interceptors.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -28,6 +28,7 @@
 
 <!--services-->
 <script src="js/services/users.js"></script>
+<script src="js/services/authentication.js"></script>
 
 <!--components-->
 <script src="js/components/login-form-component.js"></script>
