--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -8,6 +8,7 @@
 <div ui-view></div>
 
 <!--style-->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 <link href="vendors/angular-material.min.css" rel="stylesheet"/>
 
 <!--icons-->
@@ -25,14 +26,16 @@
 
 <!--controllers-->
 <script src="js/controllers/login-controller.js"></script>
+<script src="js/controllers/profile-controller.js"></script>
 
 <!--services-->
 <script src="js/services/users.js"></script>
 <script src="js/services/authentication.js"></script>
 
 <!--components-->
-<script src="js/components/login-form-component.js"></script>
-<script src="js/components/register-form-component.js"></script>
+<script src="js/components/login-form.js"></script>
+<script src="js/components/register-form.js"></script>
+<script src="js/components/profile-dashboard.js"></script>
 
 </body>
 </html>
