created user toolbar component.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -35,7 +35,9 @@
 <!--components-->
 <script src="js/components/login-form.js"></script>
 <script src="js/components/register-form.js"></script>
+<script src="js/components/user-toolbar.js"></script>
 <script src="js/components/profile-dashboard.js"></script>
+
 
 </body>
 </html>
