added tabs on profile page for tracks, albums, and followers.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -27,7 +27,7 @@
 <!--controllers-->
 <script src="js/controllers/login-controller.js"></script>
 <script src="js/controllers/profile-controller.js"></script>
-<script src="js/controllers/account-settings.js"></script>
+<!--<script src="js/controllers/account-settings.js"></script>-->
 
 <!--services-->
 <script src="js/services/users.js"></script>
@@ -37,8 +37,11 @@
 <script src="js/components/login-form.js"></script>
 <script src="js/components/register-form.js"></script>
 <script src="js/components/user-toolbar.js"></script>
-<script src="js/components/profile-dashboard.js"></script>
-<script src="js/components/account-settings.js"></script>
+<!--<script src="js/components/profile-dashboard.js"></script>-->
+<!--<script src="js/components/account-settings.js"></script>-->
+<script src="js/components/tracks-form.js"></script>
+<script src="js/components/albums.js"></script>
+<script src="js/components/followers.js"></script>
 
 
 </body>
