building out audio-player.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -39,9 +39,11 @@
 <script src="js/components/user-toolbar/user-toolbar.js"></script>
 <script src="js/components/register/register.js"></script>
 <script src="js/components/tracks-form/tracks-form.js"></script>
-<script src="js/components/tracks/tracks.js"></script>
+<!--<script src="js/components/tracks/tracks.js"></script>-->
 <script src="js/components/albums/albums.js"></script>
 <script src="js/components/followers/followers.js"></script>
+<script src="js/components/audio-track/audio-track.js"></script>
+<script src="js/components/audio-player/audio-player.js"></script>
 
 
 </body>
