added volume and track progress to audio player. Need to fix huge digest cycle bug.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -39,12 +39,13 @@
 <script src="js/components/user-toolbar/user-toolbar.js"></script>
 <script src="js/components/register/register.js"></script>
 <script src="js/components/tracks-form/tracks-form.js"></script>
-<!--<script src="js/components/tracks/tracks.js"></script>-->
 <script src="js/components/albums/albums.js"></script>
 <script src="js/components/followers/followers.js"></script>
 <script src="js/components/audio-track/audio-track.js"></script>
 <script src="js/components/audio-player/audio-player.js"></script>
 
+<!--filters-->
+<script src="js/filters/seconds-to-hhmmss.js"></script>
 
 </body>
 </html>
