updated track card and created component for tab content.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -38,7 +38,9 @@
 <script src="js/components/register-form/register-form.js"></script>
 <script src="js/components/user-toolbar/user-toolbar.js"></script>
 <script src="js/components/register/register.js"></script>
+<script src="js/components/track-card/track-card.js"></script>
 <script src="js/components/tracks-form/tracks-form.js"></script>
+<script src="js/components/tracks-tab-content/tracks-tab-content.js"></script>
 <script src="js/components/albums/albums.js"></script>
 <script src="js/components/followers/followers.js"></script>
 <script src="js/components/audio-track/audio-track.js"></script>
