made profile view a component. Passing in artist, tracks, and albums info via component bindings.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -32,6 +32,8 @@
 <!--services-->
 <script src="js/services/users.js"></script>
 <script src="js/services/authentication.js"></script>
+<script src="js/services/tracks.js"></script>
+<script src="js/services/artists.js"></script>
 
 <!--components-->
 <script src="js/components/login-form/login-form.js"></script>
@@ -45,6 +47,7 @@
 <script src="js/components/followers/followers.js"></script>
 <script src="js/components/audio-track/audio-track.js"></script>
 <script src="js/components/audio-player/audio-player.js"></script>
+<script src="js/components/profile/profile.js"></script>
 
 <!--filters-->
 <script src="js/filters/seconds-to-hhmmss.js"></script>
